# limbo

./: .github.json  .gitignore  CHANGELOG.md  COMPAT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  Makefile  NOTICE.md  PERF.md  Pipfile  README.md  database.db  dist-workspace.toml  flake.nix
bindings/go/: Cargo.toml  README.md  connection.go  go.mod  go.sum  limbo.go  limbo_test.go  limbo_unix.go  limbo_windows.go  rows.go  stmt.go  turso.go  types.go
bindings/go/cmd/: main.go
bindings/go/rs_src/: lib.rs  rows.rs  statement.rs  types.rs
bindings/java/: .gitignore  Cargo.toml  Makefile  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
bindings/java/example/: .gitignore  build.gradle.kts  settings.gradle.kts
bindings/java/rs_src/: connection.rs  cursor.rs  errors.rs  lib.rs  limbo_connection.rs  limbo_db.rs  limbo_statement.rs  macros.rs  utils.rs
bindings/python/: Cargo.toml  Makefile  build.rs  example.py  pyproject.toml  requirements-dev.txt  requirements.txt
bindings/python/limbo/: __init__.py  _limbo.pyi  limbo.pyi
bindings/python/src/: errors.rs  lib.rs
bindings/python/tests/: database.db  hello.db  test_database.py
bindings/rust/: Cargo.toml
bindings/rust/examples/: example.rs
bindings/rust/src/: lib.rs  params.rs  value.rs
bindings/wasm/: .gitignore  Cargo.toml  README.md  index.html  lib.rs  limbo-opfs-test.html  limbo-test.html  node_package.json  package-lock.json  package.json  playwright.config.js  vfs.js  vite.config.js
bindings/wasm/browser-its/: package.json
bindings/wasm/docs/: api.md
bindings/wasm/examples/: drizzle.js  example.js  package.json
bindings/wasm/html/: limbo-opfs-test.html
bindings/wasm/integration-tests/: package-lock.json  package.json
bindings/wasm/integration-tests/tests/: test.js
bindings/wasm/perf/: package.json  perf-better-sqlite3.js  perf-limbo.js
bindings/wasm/scripts/: build
bindings/wasm/src/: limbo-worker.js  opfs-sync-proxy.js  opfs-worker.js  opfs.js  web-vfs.js
bindings/wasm/test/: helpers.js  limbo.test.js  opfs.test.js  setup.js  test.html
bindings/wasm/test-limbo-pkg/: index.cjs  index.html  index.js  package-lock.json  package.json  vite.config.js
bindings/wasm/test-web/html/: index.html
bindings/wasm/test-web/test/: opfs.test.js
bindings/wasm/web/: package.json  vite.config.js
bindings/wasm/web/html/: index.html
bindings/wasm/web/src/: limbo-worker.js  opfs-interface.js
bindings/wasm/web/test/: opfs.test.js
cli/: Cargo.toml  app.rs  import.rs  main.rs  opcodes_dictionary.rs
cli/tests/: test_journal.rs
core/: Cargo.toml  btree.rs  buffer_pool.rs  build.rs  datetime.rs  error.rs  expr.rs  function.rs  info.rs  io.rs  json.rs  lib.rs  pager.rs  parameters.rs  pseudo.rs  result.rs  schema.rs  select.rs  sorter.rs  sqlite3_ondisk.rs  storage.rs  translate.rs  types.rs  util.rs  vdbe.rs  wal.rs  where_clause.rs
core/benches/: benchmark.rs  mvcc_benchmark.rs
core/ext/: mod.rs  uuid.rs
core/functions/: datetime.rs  mod.rs  printf.rs
core/io/: common.rs  darwin.rs  generic.rs  io_uring.rs  linux.rs  memory.rs  mod.rs  sync_io.rs  syscall.rs  unix.rs  windows.rs
core/json/: de.rs  error.rs  json.pest  json_operations.rs  json_path.pest  json_path.rs  mod.rs  path.rs  ser.rs
core/mvcc/: .gitignore  Cargo.toml  LICENSE.md  README.md  clock.rs  cursor.rs  mod.rs
core/mvcc/.github/workflows/: smoke_test.yml
core/mvcc/bindings/c/: Cargo.toml  build.rs  cbindgen.toml
core/mvcc/database/: Cargo.toml  mod.rs  tests.rs
core/mvcc/docs/: DESIGN.md
core/mvcc/mvcc-rs/: Cargo.toml
core/mvcc/persistent_storage/: mod.rs
core/parser/: SUPPORTED_FEATURES.MD  ast.rs  clause.rs  expression.rs  mod.rs  operators.rs  parser-shitty-fuzzer-input.txt  statement.rs  tokenizer.rs  utils.rs
core/storage/: btree.rs  buffer_pool.rs  database.rs  mod.rs  page_cache.rs  pager.rs  sqlite3_ondisk.rs  wal.rs
core/translate/: aggregation.rs  create_table.rs  delete.rs  emitter.rs  expr.rs  group_by.rs  insert.rs  main_loop.rs  mod.rs  optimizer.rs  order_by.rs  plan.rs  planner.rs  pragma.rs  result_row.rs  select.rs  subquery.rs  transaction.rs  where_clause.rs
core/vdbe/: builder.rs  datetime.rs  enum_with_docs.rs  explain.rs  insn.rs  likeop.rs  mod.rs  printf.rs  sorter.rs  strftime.rs
core/vector/: mod.rs  vector_types.rs
extensions/crypto/: Cargo.toml
extensions/crypto/src/: crypto.rs  lib.rs
extensions/percentile/: Cargo.toml
extensions/percentile/src/: lib.rs
extensions/regexp/: Cargo.toml
extensions/regexp/src/: lib.rs
extensions/series/: Cargo.toml
extensions/series/src/: lib.rs
extensions/time/: Cargo.toml
extensions/time/src/: lib.rs  time.rs
extensions/uuid/: Cargo.toml
extensions/uuid/src/: lib.rs
extensions/vector/: Cargo.toml
extensions/vector/src/: lib.rs  vector.rs
macros/: Cargo.toml
macros/src/: args.rs  lib.rs
scripts/: run-sim  (+1 more)
simulator/: Cargo.toml  README.md  generation.rs  main.rs  model.rs  properties.rs
simulator/generation/: mod.rs  plan.rs  property.rs  query.rs  table.rs
simulator/model/: mod.rs  query.rs  table.rs
simulator/model/query/: create.rs  delete.rs  drop.rs  insert.rs  mod.rs  select.rs
simulator/runner/: cli.rs  differential.rs  env.rs  execution.rs  file.rs  io.rs  mod.rs  watch.rs
simulator/shrink/: plan.rs
simulator/simulator/: env.rs  file.rs  io.rs
sqlite3/: Cargo.toml  build.rs  cbindgen.toml
sqlite3/examples/: example.c
sqlite3/include/: sqlite3.h
sqlite3/src/: lib.rs  util.rs
sqlite3/tests/: .gitignore  Makefile  check.h  main.c  test-aux.c  test-close.c  test-open.c  test-prepare.c
test/: Cargo.toml  README.md  reset.sh
test/src/: lib.rs
tests/: Cargo.toml  README.md
tests/fuzz/: grammar_generator.rs  mod.rs
tests/integration/: common.rs  mod.rs
tests/integration/functions/: mod.rs  test_function_rowid.rs
tests/integration/fuzz/: grammar_generator.rs  mod.rs
tests/integration/pragma/: mod.rs  test_pragma_stmts.rs
tests/integration/query_processing/: mod.rs  test_read_path.rs  test_write_path.rs
tests/integration/wal/: mod.rs  test_wal.rs
(+205 files in other folders)
