# Copyright 2023 the Limbo authors. All rights reserved. MIT license.

[workspace]
resolver = "2"
members = [
    "bindings/java",
    "bindings/python",
    "bindings/rust",
    "bindings/wasm",
	"bindings/go",
    "cli",
    "core",
    "extensions/core",
    "extensions/uuid",
    "extensions/regexp",
    "macros",
    "simulator",
    "sqlite3",
    "tests",
    "extensions/percentile",
    "extensions/time",
    "extensions/crypto",
    "extensions/series",
]
exclude = ["perf/latency/limbo"]

[workspace.package]
version = "0.0.14"
authors = ["the Limbo authors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/tursodatabase/limbo"

[workspace.dependencies]
limbo_core = { path = "core", version = "0.0.14" }
limbo_crypto = { path = "extensions/crypto", version = "0.0.14" }
limbo_ext = { path = "extensions/core", version = "0.0.14" }
limbo_macros = { path = "macros", version = "0.0.14" }
limbo_percentile = { path = "extensions/percentile", version = "0.0.14" }
limbo_regexp = { path = "extensions/regexp", version = "0.0.14" }
limbo_series = { path = "extensions/series", version = "0.0.14" }
limbo_time = { path = "extensions/time", version = "0.0.14" }
limbo_uuid = { path = "extensions/uuid", version = "0.0.14" }
limbo_sqlite3_parser = { path = "vendored/sqlite3-parser", version = "0.0.14" }

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.21.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Path that installers should place binaries in
install-path = "~/.limbo"
# Whether to install an updater program
install-updater = true
# Whether to consider the binaries in a package for distribution (defaults true)
dist = false
# Whether to enable GitHub Attestations
github-attestations = true

[profile.release]
debug = "line-tables-only"
codegen-units = 1
panic = "abort"
lto = true

[profile.bench-profile]
inherits = "release"
debug = true

[profile.dist]
inherits = "release"
lto = "thin"
