# Copyright 2023 the Limbo authors. All rights reserved. MIT license.

[workspace]
resolver = "2"
members = [
    "bindings/java",
    "bindings/python",
    "bindings/rust",
    "bindings/wasm",
	"bindings/go",
    "cli",
    "core",
    "extensions/core",
    "extensions/uuid",
    "extensions/regexp",
    "macros",
    "simulator",
    "sqlite3",
    "tests",
    "extensions/percentile",
    "extensions/time",
    "extensions/crypto",
    "extensions/series",
]
exclude = ["perf/latency/limbo"]

[workspace.package]
version = "0.0.14"
authors = ["the Limbo authors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/tursodatabase/limbo"

[workspace.dependencies]
limbo_core = { path = "core", version = "0.0.14" }

[profile.release]
debug = "line-tables-only"
codegen-units = 1
panic = "abort"
lto = true

[profile.bench-profile]
inherits = "release"
debug = true

[profile.dist]
inherits = "release"
lto = "thin"
