# Copyright 2023 the Limbo authors. All rights reserved. MIT license.

[workspace]
resolver = "2"
members = [
    "bindings/go",
    "bindings/java",
    "bindings/python",
    "bindings/rust",
    "bindings/wasm",
    "cli",
    "core",
    "extensions/core",
    "extensions/crypto",
    "extensions/percentile",
    "extensions/regexp",
    "extensions/series",
    "extensions/time",
    "extensions/uuid",
    "macros",
    "simulator",
    "sqlite3",
    "tests",
]
exclude = ["perf/latency/limbo"]

[workspace.package]
version = "0.0.14"
authors = ["the Limbo authors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/tursodatabase/limbo"

[workspace.dependencies]
limbo_core = { path = "core", version = "0.0.14" }
limbo_crypto = { path = "extensions/crypto", version = "0.0.14" }
limbo_ext = { path = "extensions/core", version = "0.0.14" }
limbo_macros = { path = "macros", version = "0.0.14" }
limbo_percentile = { path = "extensions/percentile", version = "0.0.14" }
limbo_regexp = { path = "extensions/regexp", version = "0.0.14" }
limbo_series = { path = "extensions/series", version = "0.0.14" }
limbo_time = { path = "extensions/time", version = "0.0.14" }
limbo_uuid = { path = "extensions/uuid", version = "0.0.14" }
limbo_sqlite3_parser = { path = "vendored/sqlite3-parser", version = "0.0.14" }

[profile.release]
debug = "line-tables-only"
codegen-units = 1
panic = "abort"
lto = true

[profile.bench-profile]
inherits = "release"
debug = true

[profile.dist]
inherits = "release"
lto = "thin"
