# Copyright 2023 the Limbo authors. All rights reserved. MIT license.

[package]
name = "limbo"
version = "0.0.0"
authors.workspace = true
default-run = "limbo"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The Limbo interactive SQL shell"

[[bin]]
name = "limbo"
path = "main.rs"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.0", features = ["derive"] }
cli-table = "0.4.7"
dirs = "5.0.1"
env_logger = "0.10.1"
limbo_core = { path = "../core" }
rustyline = "12.0.0"
