# Copyright 2023 the Limbo authors. All rights reserved. MIT license.

[package]
name = "limbo"
version.workspace = true
authors.workspace = true
default-run = "limbo"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The Limbo interactive SQL shell"

[package.metadata.dist]
dist = true

[[bin]]
name = "limbo"
path = "main.rs"


[dependencies]
anyhow = "1.0.75"
clap = { version = "4.5", features = ["derive"] }
cli-table = "0.4.7"
dirs = "5.0.1"
env_logger = "0.10.1"
limbo_core = { path = "../core" }
rustyline = "12.0.0"
ctrlc = "3.4.4"
csv = "1.3.1"
miette = { version = "7.4.0", features = ["fancy"] }

[features]
io_uring = ["limbo_core/io_uring"]

[dev-dependencies]
assert_cmd = "^2"
predicates = "^3"

# rexpect does not support windows https://github.com/rust-cli/rexpect/issues/11
#[target.'cfg(not(windows))'.dev-dependencies]
rexpect = "0.6.0"
