# Copyright 2024 the Limbo authors. All rights reserved. MIT license.

[package]
name = "limbo_macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The Limbo database library"

[lib]
proc-macro = true

[features]

[dependencies]
quote = "1.0.38"
proc-macro2 = "1.0.93"
syn = { version = "2.0.96", features = ["full"] }
