# Copyright 2024 the Limbo authors. All rights reserved. MIT license.

[package]
name = "limbo_sim"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The Limbo deterministic simulator"
publish = false

[[bin]]
name = "limbo_sim"
path = "main.rs"

[dependencies]
anyhow = "1.0.86"
limbo_core = { path = "../core" }
rand = "0.8.5"
rand_chacha = "0.3.1"
