# Copyright 2024 the Limbo authors. All rights reserved. MIT license.

[package]
name = "limbo_sqlite3"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]
doc = false

[build-dependencies]
cbindgen = "0.24.0"

[dependencies]
env_logger = "0.11.3"
limbo_core = { path = "../core" }
log = "0.4.22"
