# Copyright 2024 the Limbo authors. All rights reserved. MIT license.

[package]
name = "limbo_sqlite3"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.dist]
dist = true

[lib]
crate-type = ["cdylib", "staticlib"]
doc = false

[build-dependencies]
cbindgen = "0.27.0"

[dependencies]
env_logger = "0.11.3"
limbo_core = { path = "../core" }
log = "0.4.22"
