# Copyright 2024 the Limbo authors. All rights reserved. MIT license.

[package]
name = "limbo_sqlite3"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
capi = []
lfs = []

[package.metadata.dist]
dist = true

[lib]
doc = false
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
env_logger = { version = "0.11.3", default-features = false }
libc = "0.2.169"
limbo_core = { path = "../core" }
log = "0.4.22"


[package.metadata.capi.header]
name = "sqlite3.h"
