[package]
name = "core_tester"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal tester of write path"

[lib]
name = "test"
path = "src/lib.rs"


[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.0", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.10.1"
limbo_core = { path = "../core" }
rustyline = "12.0.0"
rusqlite = "0.29.0"
tempfile = "3.0.7"

[dev-dependencies]
rstest = "0.18.2"
