[package]
name = "core_tester"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Integration & fuzz tests"

[lib]
path = "lib.rs"

[[test]]
name = "integration_tests"
path = "integration/mod.rs"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.10.1"
limbo_core = { path = "../core" }
rustyline = "12.0.0"
rusqlite = { version = "0.29", features = ["bundled"] }
tempfile = "3.0.7"
log = "0.4.22"
assert_cmd = "^2"
rand_chacha = "0.9.0"
rand = "0.9.0"

# rexpect does not support windows.
[target.'cfg(not(windows))'.dependencies]
rexpect = "0.6.0"
