[package]
name = "core_tester"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Integration & fuzz tests"

[lib]
path = "lib.rs"

[[test]]
name = "integration_tests"
path = "integration/mod.rs"

[dependencies]
anyhow = "1.0.75"
env_logger = "0.10.1"
limbo_core = { path = "../core" }
rusqlite = { version = "0.29", features = ["bundled"] }
tempfile = "3.0.7"
log = "0.4.22"
assert_cmd = "^2"
rand_chacha = "0.9.0"
rand = "0.9.0"

# rexpect does not support windows.
[target.'cfg(not(windows))'.dependencies]
rexpect = "0.6.0"
