[package]
name = "java-limbo"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "_limbo_java"
crate-type = ["cdylib"]
path = "rs_src/lib.rs"

[dependencies]
limbo_core = { path = "../../core" }
jni = "0.21.1"
thiserror = "2.0.9"
