[package]
name = "limbo-wasm"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
anyhow = "1.0.75"
limbo_core = { path = "../../core", default-features = false }
wasm-bindgen = "0.2"
