[package]
name = "limbo-wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
limbo_core = { path = "../../core", default-features = false }
wasm-bindgen = "0.2"
