[package]
name = "limbo_crypto"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
static= [ "limbo_ext/static" ]

[dependencies]
blake3 = "1.5.5"
data-encoding = "2.7.0"
limbo_ext = { path = "../core", features = ["static"] }
md5 = "0.7.0"
ring = "0.17.8"
urlencoding = "2.1.3"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
mimalloc = { version = "*", default-features = false }
