[package]
name = "limbo_percentile"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
static = ["limbo_ext/static"]

[dependencies]
limbo_ext = { workspace = true, features = ["static"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
mimalloc = { version = "*", default-features = false }
