[package]
name = "limbo_regexp"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
static = ["limbo_ext/static"]
defaults = []

[lib]
crate-type = ["cdylib", "lib"]


[dependencies]
limbo_ext = { path = "../core", features = ["static"] }
regex = "1.11.1"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
mimalloc = { version = "*", default-features = false }
