[package]
name = "limbo_series"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
static = ["limbo_ext/static"]

[lib]
crate-type = ["cdylib", "lib"]


[dependencies]
limbo_ext = { path = "../core", features = ["static"] }
log = "0.4.20"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
mimalloc = { version = "*", default-features = false }

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
