[package]
name = "limbo_vector"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
static= [ "limbo_ext/static" ]
default = ["quickcheck/default"]

[dependencies]
limbo_ext = { path = "../core", features = ["static"] }

[dev-dependencies]
quickcheck = { version = "1.0", default-features = false }
quickcheck_macros = { version = "1.0", default-features = false }
rand = "0.8"  # Required for quickcheck
