[package]
name = "mvcc-rs"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
futures = "0.3.28"
thiserror = "1.0.40"
tracing = "0.1.37"
tokio = { version = "1.27.0", features = ["full", "parking_lot"] }
tokio-stream = { version = "0.1.12", features = ["io-util"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
pin-project = "1.0.12"
tracing-subscriber = { version = "0", optional = true }
base64 = "0.21.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports", "async", "async_futures"] }
pprof = { version = "0.11.1", features = ["criterion", "flamegraph"] }
shuttle = "0.6.0"
tracing-subscriber = "0"
tracing-test = "0"
mvcc-rs = { path = "." }

[[bench]]
name = "my_benchmark"
harness = false

[features]
default = []
c_bindings = ["dep:tracing-subscriber"]
