[package]
name = "mvcc-rs"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
thiserror = "1.0.40"
tracing = "0.1.37"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tracing-subscriber = { version = "0", optional = true }
base64 = "0.21.0"
aws-sdk-s3 = "0.27.0"
aws-config = "0.55.2"
parking_lot = "0.12.1"
futures = "0.3.28"
crossbeam-skiplist = "0.1.1"
tracing-test = "0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports", "async", "async_futures"] }
pprof = { version = "0.11.1", features = ["criterion", "flamegraph"] }
tracing-subscriber = "0"
mvcc-rs = { path = "." }

[[bench]]
name = "my_benchmark"
harness = false

[features]
default = []
c_bindings = ["dep:tracing-subscriber"]
